<resources>
    <string name="app_name">Jajanan Pasar</string>
    <string name="try_again">Try again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="input_email">Enter your email</string>
    <string name="input_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="input_username">Enter your username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="input_confirm_password">Enter your confirm password</string>
    <string name="recipe">Recipe</string>
    <string name="recomended_for_you">Recommended for you</string>
    <string name="see_more">See more</string>
    <string name="snack">Snack</string>
    <string name="favourite">Favourite</string>
    <string name="recommended">Recommended</string>
    <string name="added_to_cart">Has been added to basket</string>
    <string name="add_to_cart">Add To Basket</string>
    <string name="see_recipes">See Recipes</string>
    <string name="check_cart">View Basket</string>
    <string name="item">Item</string>
    <string name="logut">Logout</string>
    <string name="buy">Buy</string>
    <string name="order_summary">Order summary</string>
    <string name="add_item">Add item</string>
    <string name="total">Total</string>
    <string name="upload_struct">Upload struct</string>
    <string name="choose_payment">Choose your bank</string>
    <string name="remaining_payment_time">Remaining payment time</string>
    <string name="warning">Warning</string>
    <string name="message_canceling_transaction">transaction is currently processing, Are you sure want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copied">Account Number Coppied</string>
    <string name="back_to_home">Home</string>
    <string name="change_image">Change image</string>
    <string name="loading_upload">Uploading...</string>
    <string name="process">Processing...</string>
    <string name="something_wrong">Something wrong happend...</string>
    <string name="camera">Camera</string>
    <string name="galery">Gallery</string>
    <string name="message_success">Congratulations, proof of transfer has been successfully uploaded</string>
    <string name="message_timeout">Sorry ,Timeout !!!!</string>
    <string name="loading_banner">Loading poster...</string>
    <string name="loading_recommended">Loading recommended products...</string>
    <string name="loading_product">Loading product...</string>
    <string name="loading_cart_total">Loading cart total...</string>
    <string name="loading_cart">Loading cart...</string>
    <string name="updating_cart">Updating cart...</string>
    <string name="checkout">Checking Out...</string>
    <string name="loading_recipe">Loading recipe...</string>
    <string name="adding_to_cart">Adding to cart...</string>
    <string name="loading_favourite">Loading favourite...</string>
    <string name="loading_payment">Loading payment...</string>
    <string name="loading_transaction">Loading transaction...</string>
    <string name="wa">WhatsApp</string>
    <string name="contact_us">Contact us</string>
    <string name="promo">Promo</string>
    <string name="loading_promo">Loading Promo...</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="payment_method_transfer">Transfer</string>
    <string name="payment_method_transfer_description">Transfer via Atm then upload image of the receipt</string>
    <string name="payment_method_cod">Cash On Delivery</string>
    <string name="payment_method_cod_description">Product will be send to your location then payment can be give  to courier</string>
    <string name="submit_address">Submit Address</string>
    <string name="input_address">Delivery Detail</string>
    <string name="input_address_hint">Address...</string>
    <string name="note_code">*Note : delivery service payment Rp5.000</string>
    <string name="stock_is_not_enough">Stock is not enough</string>
    <string name="product_is_expired">Product is Expired</string>
</resources>