<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <LinearLayout
            android:id="@+id/layout_login_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:visibility="visible">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:textSize="14sp"
                    android:background="@drawable/rounded_shape_input"
                    android:ems="10"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/password"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:textSize="14sp"
                    android:background="@drawable/rounded_shape_input"
                    android:ems="10"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorWhite"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone" />

    </FrameLayout>

</LinearLayout>