<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.cod.CodActivity">

    <FrameLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cod_form_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_imageview"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center|left"
                    android:text="@string/input_address"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_address_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_address_hint"
                    android:inputType="textPostalAddress"
                    android:minHeight="120dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="vertical"></LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/note_code"
                    android:textColor="@color/colorGray"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/send_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0"
                android:background="@drawable/rounded_shape"
                android:minHeight="60dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/submit_address"
                android:textAllCaps="false"
                android:textColor="@color/textColorWhite"
                android:textSize="18sp" />

        </LinearLayout>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone" />

        <include
            android:id="@+id/error_layout"
            layout="@layout/error_message_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone" />

    </FrameLayout>



</LinearLayout>