<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.home.HomeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/home_nestedscrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/profile_imageview"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/profile" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/favourite_imageview"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/favourite" />

                        <LinearLayout
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:orientation="vertical"></LinearLayout>

                        <ImageView
                            android:id="@+id/cart_imageview"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/cart" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textColor="@color/textColorBlack"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/receipt_button"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:background="@drawable/rounded_shape_clear"
                        android:minWidth="107dp"
                        android:text="@string/recipe"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorWhite"
                        android:textSize="12sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/banner_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    tools:visibility="visible">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/recomended_for_you"
                        android:textColor="@color/textColorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/see_more_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/see_more"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recomended_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:clipToPadding="false"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/snack"
                    android:layout_margin="15dp"
                    android:textColor="@color/textColorBlack"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/product_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:nestedScrollingEnabled="false"
                    tools:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/cart_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_shape"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:textSize="18sp" />

    </FrameLayout>
</LinearLayout>